--- a/clock/clock.html
+++ b/clock/clock.html
@@ -29,9 +29,9 @@
 
            <!-- digital clock -->
            <div id="time">
-            <div id="hours" style="--clr:#04fc43;">00</div>
+            <div id="hours" style="--clr:#ff2972;">00</div>
             <div id="minutes" style="--clr:#fee800;">00</div>
-            <div id="seconds" style="--clr:#ff2972;">00</div>
+            <div id="seconds" style="--clr:#04fc43;">00</div>
             <div id="ampm">AM</div>
            </div>
         </div>
